--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "A CLI tool to info words from web"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11", features = ["blocking", "json"] }
+reqwest = { version = "0.11", features = ["json"] }
 clap = { version = "4.5.1", features = ["derive"] }
 colored = "2.1.0"
 lazy_static = "1.4.0"
@@ -18,9 +18,11 @@ log = "0.4.20"
 env_logger = "0.11.2"
 url = { version = "2.5.0", features = ["serde"] }
 wana_kana = "3.0.0"
-scraper = "0.18.1"                                              # https://lib.rs/crates/scraper
+scraper = "0.18.1"                                                       # https://lib.rs/crates/scraper
 home = "0.5.9"
 anyhow = "1.0.80"
+tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
+futures = "0.3.30"
 
 [dependencies.die-exit]
 version = "*"
