--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "wordinfo"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 authors = ["lxl66566 <lxl66566@gmail.com>"]
-description = "A CLI tool to info words from web"
+description = "A CLI tool to info words from web."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,8 +14,8 @@ colored = "2.1.0"
 lazy_static = "1.4.0"
 serde = { version = "1.0.197", features = ["derive"] }
 toml = "0.8.10"
-log = "0.4.20"
-env_logger = "0.11.2"
+# log = "0.4.20"
+# env_logger = "0.11.2"
 url = { version = "2.5.0", features = ["serde"] }
 wana_kana = "3.0.0"
 scraper = "0.18.1"                                                       # https://lib.rs/crates/scraper
