--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "A CLI tool to info words from web."
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 clap = { version = "4.5.1", features = ["derive"] }
 colored = "2.1.0"
 lazy_static = "1.4.0"
@@ -18,19 +18,14 @@ toml = "0.8.10"
 # env_logger = "0.11.2"
 url = { version = "2.5.0", features = ["serde"] }
 wana_kana = "3.0.0"
-scraper = "0.18.1"                                                       # https://lib.rs/crates/scraper
+scraper = "0.19"
 home = "0.5.9"
 anyhow = "1.0.80"
-tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "rt"] }
 futures = "0.3.30"
 serde_json = "1.0.114"
 serde_yaml = "0.9.32"
-
-
-[dependencies.die-exit]
-version = "*"
-git = "https://github.com/lxl66566/die.git"
-features = ["red"]
+die-exit = { version = "0.5.0", features = ["red"] }
 
 
 [profile.release]
